# StockScope

./: .gitignore  README.md  ROADMAP.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_stockscope.py
.claude/: settings.local.json
.claude/skills/stock-analysis/: SKILL.md
.claude/skills/stock-analysis/scripts/: .translate_cache.json  analyze.py
config/: scoring.toml  watchlist.toml
src/stockscope/: cli.py  config.py  models.py  name_resolver.py  reports.py  research_index.py  scoring.py  server.py  us_indicators.py
src/stockscope.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/stockscope/fetchers/: yahoo.py
tests/: test_config.py  test_name_resolver.py  test_reports.py  test_scoring.py  test_server.py
