[project]
name = "stockscope"
version = "0.1.0"
description = "Lightweight stock and ETF signal screener"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["yfinance>=1.3.0,<2.0"]

[project.optional-dependencies]
dev = ["pytest>=9.0"]
web = ["fastapi>=0.100", "uvicorn>=0.20", "apscheduler>=3.10"]

[project.scripts]
stockscope = "stockscope.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
